# GAPPS

./: .gitignore  README  elog  gitpull  gitpush  syncup2mars  targapps  tarit  vers  vlog
ANN/ABC_RECOG/: abc_recog.asl
ANN/ACTIV/: #netactiv.asl#  netactiv.asl  wann.g
ANN/ALPATTR/: net_g.asl  pattr2d.asl  test_patnet.asl
ANN/ALSHIFTR/: net_g.asl  patshiftr.asl  test_patnet.asl
ANN/FE/: fe_sann.g
ANN/PAT2D/: alpha_ip.asl  net_g.asl  pat2d.asl  patprep.asl  test_patnet.asl  veccat.asl
ANN/TEST/: test_ann.g
ANN/XOR/: ann_xor.asl  genhyperact.asl  genlogistic.asl  hypxor.txt  plotact.asl  plotxy.asl  xor  xor.asl  xor.txt  xor2good.txt  xor_g.asl  xor_net.wts
APPS/: README
APPS/ActivityLogger/: activity-logger.asl  activity-procs.asl  activity-screen.asl
APPS/CalCounter/: .#fixit2.asl  .#query_food.asl  calcounter.asl  calcounter.dev  calcounter_day.asl  calcounter_fav.asl  calcounter_foods.asl  calcounter_scrn.asl  calcounter_ssp.asl  calcounter_tty.asl  checkFood.asl  daytotal.asl  dd_12-19-2016  ddc.asl  ddc_screen.asl  drinks-spirits.csv  editfoods.asl  editfoods_scrn.asl  editfoods_ssp.asl  favfoods.csv  filter_empty.asl  fixit.asl  fixit4.asl  food_class.asl  foodclass.asl  foods-beers.csv  foods-bread.csv  foods-breads.csv  foods-cake.csv  foods-cakes.csv  foods-cereal.csv  foods-cereals.csv  foods-cheese.csv  foods-crackers.csv  foods-drinks.csv  foods-eggs.csv  foods-fish.csv  foods-flour.csv  foods-fruits.csv  foods-grain.csv  (+42 more)
APPS/DayTasker/: colorRows.asl  dayt_menus.asl  dayt_procs.asl  dayt_scrn.asl  dayt_tty.asl  daytasker.asl  daytasker2.asl  testprocfuncargs.asl
APPS/DayTracker/: .daytracker.dbi~  Activity.m  Exer.m  Lang.m  Week_45_2016.txt  Week_46_2016.txt  Week_47_2016.txt  Week_48_2016.txt  daytracker.asl  daytracker.dev  fixcontline.asl  print.txt  query_w_test.asl  sheet.txt  sheet_wk.txt  strcmp_bug.asl  track_Week_12.txt  track_Week_13.txt  track_Week_16.txt  track_Week_43.txt  track_Week_44.txt  track_Week_45.txt  weekplanner.asl  wk_12
APPS/Fit/: AAOF2542.FIT  bike.fit  fit2tsv.asl  fitconv.asl  fitconv1.asl  fitconv2.asl  fitconv_f.asl  fix_Ox.asl  fix_row_set.asl  proc_test.asl  showrbh.asl
APPS/FontMaker/: A1.sst  B.sst  B1.sst  C.sst  C1.sst  C2.sst  D1.sst  G.sst  J.sst  K.sst  P.sst  (+18 more)
COMPILE/: README.txt  README_asl2cpp.txt  bops_test.asl  buttons.asl  cinclude.asl  class_cpp.asl  class_test.asl  classtest.asl  colors_test.asl  compile.asl  conv_asl_print.asl  cpp.dbg  cpp_script_start.txt  cpp_template.asl  cpp_test.asl  cprintf_test.asl  exp1.asl  exp1_cpp.asl  gevent.asl  glines_test.asl  graphic.asl  junk  mat.dbg  mat2cpp  mat2cpp.asc  mat2cpp.asl  mat_test.asl  mat_uac.asl  mda_test.asl  oa_cpp.asl  powtest.asl  pt.asl  pt1.asl  record_test.asl  release.asl  run_app  run_class  run_cpp  run_glines  run_str  (+34 more)
COMPILE/ASC/: GsubCDB  Makefile  Makefile.am  Makefile.old  README.txt  auto_dec_via_func  auto_dec_via_func.asc  auto_dec_via_func.asl  auto_dec_via_func_1.asc  bbrief.cup  bops_test  bops_test.asc  bops_test.cpp  colors.asc  colors.asl  cpp_head_orig.h  cpp_heasrc  cprintf  cprintf.asc  cprintf.asl  debug.asl  debug2.asc  debug2.asl  err  if_cpp.asc  inc1.asc  inc1.asl  inc2.asc  inc2.asl  inc3.asc  inc3.asl  inc4.asc  inc4.asl  junk  main_asl.txt  makefile  navi.asl  orig_debug.asl  proc_cpp.asc  proc_cpp.asl  (+45 more)
COMPILE/ASC/Navi/: fix_auto_dec  fix_auto_dec.asc  fix_auto_dec.asc.bak  fix_auto_dec.asl  fix_auto_dec.tic  navi  navi.asc  navi.asc.bak  navi.asl
COMPILE/ASC/Navi/BAK/: navi.asc  navi.asl  navi1.asc
COMPILE/ASC/PROC_CPP/: proc_cpp
DAT/: bpp.tsv  cc2022.tsv  cc2023.tsv  cc2024.tsv  cc2025.tsv  cc2025.tsv~  ccwx.tsv  jcc.tsv  wex2019.tsv  wex2020.tsv  wex2022.tsv  wex2023.tsv  wex2024.tsv  wex2025.tsv
DEMOS/: README
DEV/: B-Es.dev  B-Fm.dev  README.txt  asl.dev  asldev.asl  buglist.txt  devasl.txt  devaudio.txt  devhash.txt  devpath.txt  df.dev  fonts.dev  score.txt  tbd.dev  tbd.txt  todo.txt  xgsdevlog.txt
DOCS/: ASL2CPP.txt  ASLMAN  ASLMAN.txt  asl2cpp.txt  aslinfo.asl  bashrc  buglist.txt  dev.txt  sinfo  todo.txt  todo_ASAP.txt
DSP/SP/SPM/ADDH/: Makefile.am  Makefile.in  addh.c  addh.cpp  makefile
LIB/: 2w.asl  Cbump.asl  abump.asl  aslmake  aslxmake  bump.asl  bvers.asl  cbump.asl  chead.asl  cleanexe.asl  colors.asl  compile.asl  consts.asl  date.asl  debug.asl  dow.asl  epl.asl  eqnlib.asl  event.asl  evers.asl  filler.asl  foodtable.csv  gevent.asl  graphic.asl  gss.asl  gss_screen.asl  hdrv.asl  hv.asl  hv_keyval.asl  io.asl  linebreak.asl  makeasc  makeascx  module_debug.asl  new.asl  nhead.asl  pcol.asl  playrec.asl  ptrvec2.asl  sbump.asl  (+19 more)
MENUS/: Exit.m  Root.m  color.m  font.m  menu_env.m  screen.m  set_clock.m  set_scales.m  win_env.m  window_man.m  wob_ang.m  wob_font.m  wob_fontang.m  wob_mod.m  wob_type.m  yes_or_no.m
SCRIPTS/: mvit.asl
SP/: Makefile.am
SPM/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  configure.ac
SPM/ADDH/: addh  fac-1.16k.left.pcm  fac-1.16k.left.vox
SPM/AFB/: Makefile.am  afb.c  afb_va.c
SPM/CNL/: Makefile.am  Makefile.in  cnl.c
SPM/CVR/: Makefile.am  Makefile.in
SPM/DFC/: Makefile.am  Makefile.in  dfc.c
SPM/EP/: Makefile.am
SPM/FGEN/: Makefile.in
SPM/MIXFR/: Makefile.am  Makefile.in
SPM/MTONE/: Makefile.am  Makefile.in  mtone.c
SPM/PITCH/: Makefile.am  Makefile.in
SPM/PITCH/CEPPT/: Makefile.am  ceppt.c  ceppt.cpp  q_cpt.cpp  quasi.h
SPM/PITCH/GRPT/: Makefile.am  gr_pt.cpp
SPM/PITCH/QUASI/: Makefile.am  Makefile.in  pcon.c  q_cpt.c  quasi.c
SPM/RECPLAY/: Makefile.am  grad_pp.c  rec.c
SPM/RMS/: Makefile.am  Makefile.in  rms.cpp  rms_zx.c  rms_zx.cpp
SPM/SCALE/: Makefile.am  Makefile.in
SPM/SG/: Makefile.am  Makefile.in  sg.c  sgr.cpp  sgt.c
SPM/SS/: Makefile.am  Makefile.in
SPM/STATS/: Makefile.am  Makefile.in
SPM/STUFF/: Makefile.am
SPM/TG/: Makefile.in
SPM/THRES/: Makefile.am  thres.c
SPM/T_BANK/: Makefile.in  f_bank.c
SPM/ULAW/: Makefile.in  lin_ulaw.c
SPM/VA/: Makefile.in
SPM/WN/: Makefile.am  wn.c
SPM/ZAP/: Makefile.in  zap.c
TEST/: README  README.txt  command
(+4561 files in other folders)
